[package]
name = "vconvert"
version = "0.1.1"
edition = "2021"
authors = ["ev <luna@aixeria.com>"]
description = "A simple vulnus to soundspace converter (or vice versa)"
repository = "https://github.com/aixeria/vconvert"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version =  "1.0.145", features = ["derive"]}
serde_json = "1.0.85"

[[example]]
name = "vul-to-ss"
